--- a/pages/Computer/计算机网络基础.md
+++ b/pages/Computer/计算机网络基础.md
@@ -6,7 +6,7 @@
 * TCP/IP 体系结构
 * 五层体系结构
 
-![计算机网络体系结构](../assets/img/计算机网络体系结构.png)
+![计算机网络体系结构](../../assets/img/计算机网络体系结构.jpg)
 
 ## 正向代理和反向代理
 
@@ -18,7 +18,7 @@
 
 用户知道目标服务器地址，但由于网络限制等原因，无法直接访问。这时候需要先连接代理服务器，然后再由代理服务器访问目标服务器。
 
-![正向](./img/正向.jpg)
+![正向](../../assets/img/正向.jpg)
 
 特点：
  1. 需要通过某个软件（代理服务器）
@@ -29,7 +29,7 @@
 
 反向代理对用户则是不可知的，比如我们访问百度网站，百度的代理服务器对外的域名为 https://www.baidu.com 。具体内部的服务器节点我们不知道，现实中我们通过访问百度的代理服务器后，代理服务器给我们转发请求到他们N多的服务器节点中的一个给我们进行搜索后将结果返回。
 
-![反向](./img/反向.jpg)
+![反向](../../assets/img/反向.jpg)
 
 特点：
  1. 保证安全。客户端访问公网地址，然后由反向代理服务器（公网 IP）来访问内网的 Web 服务器。
