--- a/pages/前端资料库/个人资料库.md
+++ b/pages/前端资料库/个人资料库.md
@@ -56,13 +56,14 @@
 * 国外技术社区
 * 科学上网
 
-[DevTo](https://dev.to/)
-[StackOverflow](https://stackoverflow.com/)
-[Medium](https://medium.com/)
-[GitHub](https://github.com/)
-[SimpleProgrammer](https://simpleprogrammer.com/)
-[Sitepoint](https://www.sitepoint.com/)
-[YouTube](https://www.youtube.com/)
+1. [DevTo](https://dev.to/)
+2. [StackOverflow](https://stackoverflow.com/)
+3. [Medium](https://medium.com/)
+4. [GitHub](https://github.com/)
+5. [SimpleProgrammer](https://simpleprogrammer.com/)
+6. [Sitepoint](https://www.sitepoint.com/)
+7. [YouTube](https://www.youtube.com/)
+8. [v2free](https://w1.v2free.net/)
 
 ### 推荐几个微信公众号及小程序
 
