--- a/pages/JS/函数柯里化.md
+++ b/pages/JS/函数柯里化.md
@@ -1,5 +1,11 @@
 #### 函数柯里化
 
+**在数学和计算机科学中，柯里化是一种将使用多个参数的函数转换成一系列使用一个参数的函数，并且返回接受余下的参数而且返回结果的新函数的技术。**
+
+- 利用闭包
+- 可以链式调用
+- 每次运行后，返回一个function
+
 ```js
     // 柯里化
     // 在数学和计算机科学中，柯里化是一种将使用多个参数的函数转换成一系列使用一个参数的函数，并且返回接受余下的参数而且返回结果的新函数的技术。
@@ -22,4 +28,77 @@
     })
 
     add(1, 2)
+```
+
+##### 柯里化的好处
+
+- 参数复用
+- 提前返回
+- 延迟运行
+
+``` js
+function curryingAdd (x) {
+  return function(y) {
+    return x + y;
+  }
+}
+curryingAdd(x)(y);
+```
+
+###### 参数复用
+
+```js
+// 正则表达式
+
+// 校验数字
+let numberReg = /[0-9]+/g;
+
+// 校验小写字母
+let stringReg = /[a-z]+/g;
+
+// currying 后
+function curryingCheck(reg) {
+  return function(txt) {
+    return reg.test(txt);
+  }
+}
+
+// 校验数字
+let checkNumber = curryingCheck(numberReg);
+let checkString = curryingCheck(stringReg);
+
+// 使用
+console.log(checkNumber('10086')); // true
+console.log(checkString('string')); // true
+```
+
+```js
+// 实现一个 add 方法，使计算结果能够满足以下预期
+add(1)(2)(3) = 6;
+add(1, 2, 3)(4) = 10;
+add(1)(2)(3)(4)(5) = 15;
+
+// 1. 递归
+function add(...args) {
+  let fn = function(...arg) {
+    return add(...args, ...arg);
+  }
+  fn.toString = function() {
+    return args.reduce((a, b) => a + b);
+  }
+  return fn;
+}
+
+
+```
+
+```js
+// compose(f, g, h) 等同于 (...args) => f(g(h(...args)))
+
+function compose() {
+  let args = Array.prototype.slice.call(arguments);
+  return function(x) {
+    return args.reduceRight((res, cb) => cb(res), x);
+  }
+}
 ```
